<resources>
    <string name="app_name">app</string>
    <string name="personas">Personas</string>
    <string name="locations">Locations</string>
    <string name="splash">Splash</string>
    <string name="onboarding">Onboarding</string>
    <string name="prelogin">Prelogin</string>
    <string name="rootdevice">RootDevice</string>
    <string name="no_internet">No tiene conexión a Internet</string>
    <string name="server_error">En estos momentos tenemos problemas con nuestros servidores, Intenta más tarde</string>
    <string name="feature_flag_off">En estos momentos estamos realizando una mantención a nuestros servidores, intena nuevamente en 05:36</string>
    <string name="biometric">Biometric View</string>
    <string name="server_error_message">Internal Server Error \nPor favor intentar de nuevo</string>
    <string name="volver_a_intentar_btn">Volver a Intentar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="re_prompt_password">Repetir Password</string>
    <string name="action_sign_in">Crear cuenta</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_name">Nombre</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logout">Logout</string>
</resources>